# Bandwidth-Monitor-Backend

./: .env.template  .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml
app/config/: settings.py
src/: app.ts  main.ts
src/crons/: checkClientStatus.ts
src/database/: data-source.ts
src/entities/: Bandwidth.ts  Client.ts  User.ts
src/middlewares/: authentication.ts
src/routes/: auth.routes.ts  bandwidth.routes.ts  client.routes.ts  index.ts  network.routes.ts  user.routes.ts
src/services/: bandwidth.services.ts  client.servies.ts  user.services.ts
src/utils/: constants.ts  helper.ts  type.ts
